...
                                end: Offset.zero,
                              ).animate(_textAnimation),
                              child: Column(
                                children: [
                                  Text(
                                    isArabic 
                                        ? 'محلل الحيوانات المنوية'
                                        : 'Sperm Analyzer',
                                    style: const TextStyle(
                                      fontSize: 28,
                                      fontWeight: FontWeight.bold,
                                      color: Colors.white,
                                      fontFamily: 'Cairo',
...
